@@ -1,60 +1,53 @@
 package com.simplecity.amp_library.search;
 
-import android.app.Activity;
-import android.content.Intent;
 import android.support.annotation.NonNull;
 import android.support.annotation.Nullable;
 import android.support.v7.widget.PopupMenu;
-import android.support.v7.widget.Toolbar;
 import android.text.TextUtils;
-import android.view.MenuItem;
-import android.view.SubMenu;
 import android.view.View;
 
 import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
-import com.bignerdranch.android.multiselector.MultiSelector;
 import com.bumptech.glide.RequestManager;
 import com.simplecity.amp_library.R;
 import com.simplecity.amp_library.ShuttleApplication;
 import com.simplecity.amp_library.format.PrefixHighlighter;
-import com.simplecity.amp_library.model.AdaptableItem;
 import com.simplecity.amp_library.model.Album;
 import com.simplecity.amp_library.model.AlbumArtist;
 import com.simplecity.amp_library.model.Header;
-import com.simplecity.amp_library.model.Playlist;
 import com.simplecity.amp_library.model.Song;
-import com.simplecity.amp_library.tagger.TaggerDialog;
-import com.simplecity.amp_library.ui.activities.MainActivity;
-import com.simplecity.amp_library.ui.adapters.SearchAdapter;
+import com.simplecity.amp_library.ui.adapters.ViewType;
 import com.simplecity.amp_library.ui.modelviews.AlbumArtistView;
 import com.simplecity.amp_library.ui.modelviews.AlbumView;
 import com.simplecity.amp_library.ui.modelviews.SearchHeaderView;
 import com.simplecity.amp_library.ui.modelviews.SongView;
-import com.simplecity.amp_library.ui.modelviews.ViewType;
 import com.simplecity.amp_library.ui.presenters.Presenter;
 import com.simplecity.amp_library.utils.DataManager;
-import com.simplecity.amp_library.utils.DialogUtils;
+import com.simplecity.amp_library.utils.LogUtils;
+import com.simplecity.amp_library.utils.MenuUtils;
 import com.simplecity.amp_library.utils.MusicUtils;
 import com.simplecity.amp_library.utils.Operators;
-import com.simplecity.amp_library.utils.PlaylistUtils;
 import com.simplecity.amp_library.utils.SettingsManager;
-import com.simplecity.amp_library.utils.ShuttleUtils;
 import com.simplecity.amp_library.utils.StringUtils;
+import com.simplecityapps.recycler_adapter.model.ViewModel;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import rx.Observable;
-import rx.Subscriber;
-import rx.Subscription;
-import rx.android.schedulers.AndroidSchedulers;
-import rx.schedulers.Schedulers;
+import javax.inject.Inject;
 
-class SearchPresenter extends Presenter<SearchView> implements
-        SearchAdapter.SearchListener,
-        Toolbar.OnMenuItemClickListener {
+import io.reactivex.Single;
+import io.reactivex.SingleObserver;
+import io.reactivex.SingleOperator;
+import io.reactivex.android.schedulers.AndroidSchedulers;
+import io.reactivex.disposables.Disposable;
+
+public class SearchPresenter extends Presenter<SearchView> implements
+        AlbumView.ClickListener,
+        AlbumArtistView.ClickListener {
+
+    private static final String TAG = "SearchPresenter";
 
     private static final double SCORE_THRESHOLD = 0.80;
 
@@ -62,12 +55,13 @@ class SearchPresenter extends Presenter<SearchView> implements
 
     private RequestManager requestManager;
 
-    private Subscription performSearchSubscription;
-    private Subscription setItemsSubscription;
+    private Disposable performSearchSubscription;
+    private Disposable setItemsSubscription;
 
     private String query;
 
-    SearchPresenter(PrefixHighlighter prefixHighlighter, RequestManager requestManager) {
+    @Inject
+    public SearchPresenter(PrefixHighlighter prefixHighlighter, RequestManager requestManager) {
         this.prefixHighlighter = prefixHighlighter;
         this.requestManager = requestManager;
     }
@@ -87,8 +81,13 @@ class SearchPresenter extends Presenter<SearchView> implements
     }
 
     void queryChanged(@Nullable String query) {
+
         if (TextUtils.isEmpty(query)) {
             query = "";
+        }
+
+        if (query.equals(this.query)) {
+            return;
         }
 
         loadData(query);
@@ -106,29 +105,29 @@ class SearchPresenter extends Presenter<SearchView> implements
 
             //We've received a new refresh call. Unsubscribe the in-flight subscription if it exists.
             if (performSearchSubscription != null) {
-                performSearchSubscription.unsubscribe();
+                performSearchSubscription.dispose();
             }
 
             boolean searchArtists = SettingsManager.getInstance().getSearchArtists();
 
-            Observable<List<AdaptableItem>> albumArtistsObservable = searchArtists ? DataManager.getInstance().getAlbumArtistsRelay()
-                    .first()
-                    .lift(new AlbumArtistFilterOperator(query, requestManager, prefixHighlighter)) : Observable.just(Collections.emptyList());
+            Single<List<ViewModel>> albumArtistsObservable = searchArtists ? DataManager.getInstance().getAlbumArtistsRelay()
+                    .first(Collections.emptyList())
+                    .lift(new AlbumArtistFilterOperator(query, requestManager, prefixHighlighter)) : Single.just(Collections.emptyList());
 
             boolean searchAlbums = SettingsManager.getInstance().getSearchAlbums();
 
-            Observable<List<AdaptableItem>> albumsObservable = searchAlbums ? DataManager.getInstance().getAlbumsRelay()
-                    .first()
-                    .lift(new AlbumFilterOperator(query, requestManager, prefixHighlighter)) : Observable.just(Collections.emptyList());
+            Single<List<ViewModel>> albumsObservable = searchAlbums ? DataManager.getInstance().getAlbumsRelay()
+                    .first(Collections.emptyList())
+                    .lift(new AlbumFilterOperator(query, requestManager, prefixHighlighter)) : Single.just(Collections.emptyList());
 
-            Observable<List<AdaptableItem>> songsObservable = DataManager.getInstance().getSongsRelay()
-                    .first()
+            Single<List<ViewModel>> songsObservable = DataManager.getInstance().getSongsRelay()
+                    .first(Collections.emptyList())
                     .lift(new SongFilterOperator(query, requestManager, prefixHighlighter));
 
-            performSearchSubscription = Observable.combineLatest(
+            performSearchSubscription = Single.zip(
                     albumArtistsObservable, albumsObservable, songsObservable,
                     (adaptableItems, adaptableItems2, adaptableItems3) -> {
-                        List<AdaptableItem> list = new ArrayList<>();
+                        List<ViewModel> list = new ArrayList<>();
                         list.addAll(adaptableItems);
                         list.addAll(adaptableItems2);
                         list.addAll(adaptableItems3);
@@ -139,7 +138,7 @@ class SearchPresenter extends Presenter<SearchView> implements
 
                         //We've got a new set of items to adapt.. Cancel the in-flight subscription.
                         if (setItemsSubscription != null) {
-                            setItemsSubscription.unsubscribe();
+                            setItemsSubscription.dispose();
                         }
 
                         if (adaptableItems.isEmpty()) {
@@ -147,9 +146,9 @@ class SearchPresenter extends Presenter<SearchView> implements
                         } else {
                             setItemsSubscription = searchView.setItems(adaptableItems);
                         }
-                    });
+                    }, error -> LogUtils.logException(TAG, "Error refreshing adapter", error));
 
-            addSubcscription(performSearchSubscription);
+            addDisposable(performSearchSubscription);
         }
     }
 
@@ -169,321 +168,64 @@ class SearchPresenter extends Presenter<SearchView> implements
     }
 
     @Override
-    public boolean onMenuItemClick(MenuItem item) {
+    public void onAlbumArtistClick(int position, AlbumArtistView albumArtistView, AlbumArtistView.ViewHolder viewholder) {
+        SearchView view = getView();
+        if (view != null) {
+            view.goToArtist(albumArtistView.albumArtist, viewholder.imageOne);
+        }
+    }
+
+    @Override
+    public boolean onAlbumArtistLongClick(int position, AlbumArtistView albumArtistView) {
         return false;
     }
 
     @Override
-    public void onItemClick(AlbumArtist albumArtist) {
-
-        SearchView view = getView();
-
-        Intent intent = new Intent();
-        intent.putExtra(MainActivity.ARG_MODEL, albumArtist);
-        if (view != null) {
-            view.finish(Activity.RESULT_OK, intent);
-        }
-    }
-
-    @Override
-    public void onItemClick(Album album) {
-
-        SearchView view = getView();
-
-        Intent intent = new Intent();
-        intent.putExtra(MainActivity.ARG_MODEL, album);
-        if (view != null) {
-            view.finish(Activity.RESULT_OK, intent);
-        }
-    }
-
-    @Override
-    public void onItemClick(Song song, List<Song> allSongs) {
-
-        SearchView view = getView();
-
-        int index = allSongs.indexOf(song);
-
-        MusicUtils.playAll(allSongs, index, false, () -> {
-            if (view != null) {
-                view.showEmptyPlaylistToast();
+    public void onAlbumArtistOverflowClicked(View v, AlbumArtist albumArtist) {
+        PopupMenu menu = new PopupMenu(v.getContext(), v);
+        menu.inflate(R.menu.menu_artist);
+        menu.setOnMenuItemClickListener(MenuUtils.getAlbumArtistClickListener(v.getContext(), albumArtist, taggerDialog -> {
+            SearchView searchView = getView();
+            if (searchView != null) {
+                searchView.showTaggerDialog(taggerDialog);
             }
-        });
+        }));
+        menu.show();
+    }
 
+    @Override
+    public void onAlbumClick(int position, AlbumView albumView, AlbumView.ViewHolder viewHolder) {
+        SearchView view = getView();
         if (view != null) {
-            view.finish();
+            view.goToAlbum(albumView.album, viewHolder.imageOne);
         }
     }
 
     @Override
-    public void onOverflowClick(View v, AlbumArtist albumArtist) {
-        PopupMenu menu = new PopupMenu(v.getContext(), v);
-
-        menu.getMenu().add(0, MusicUtils.Defs.PLAY_SELECTION, 0, R.string.play_selection);
-
-        SubMenu sub = menu.getMenu().addSubMenu(0, MusicUtils.Defs.ADD_TO_PLAYLIST, 1, R.string.add_to_playlist);
-        PlaylistUtils.makePlaylistMenu(v.getContext(), sub, 0);
-
-        menu.getMenu().add(0, MusicUtils.Defs.QUEUE, 2, R.string.add_to_queue);
-
-        if (ShuttleUtils.isUpgraded()) {
-            menu.getMenu().add(0, MusicUtils.Defs.TAGGER, 3, R.string.edit_tags);
-        }
-
-        menu.getMenu().add(0, MusicUtils.Defs.DELETE_ITEM, 6, R.string.delete_item);
-
-        menu.setOnMenuItemClickListener(item -> {
-
-                    SearchView view = getView();
-
-                    Observable<List<Song>> songsObservable = albumArtist.getSongsObservable();
-
-                    switch (item.getItemId()) {
-                        case MusicUtils.Defs.PLAY_SELECTION:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.playAll(songs, () -> {
-                                        if (view != null) {
-                                            view.showEmptyPlaylistToast();
-                                        }
-                                    }));
-                            return true;
-                        case MusicUtils.Defs.PLAY_NEXT:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.playNext(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.NEW_PLAYLIST:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> PlaylistUtils.createPlaylistDialog(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.PLAYLIST_SELECTED:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> {
-                                        Playlist playlist = (Playlist) item.getIntent().getSerializableExtra(ShuttleUtils.ARG_PLAYLIST);
-                                        PlaylistUtils.addToPlaylist(v.getContext(), playlist, songs);
-                                    });
-                            return true;
-                        case MusicUtils.Defs.QUEUE:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.addToQueue(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.TAGGER:
-                            if (view != null) {
-                                view.showTaggerDialog(TaggerDialog.newInstance(albumArtist));
-                            }
-                            return true;
-                        case MusicUtils.Defs.DELETE_ITEM:
-                            if (view != null) {
-                                view.showDeleteDialog(new DialogUtils.DeleteDialogBuilder()
-                                        .context(v.getContext())
-                                        .songsToDelete(songsObservable)
-                                        .singleMessageId(R.string.delete_album_artist_desc)
-                                        .multipleMessage(R.string.delete_album_artist_desc_multiple)
-                                        .itemNames(Collections.singletonList((albumArtist.name)))
-                                        .build());
-                            }
-
-                            return true;
-                    }
-                    return false;
-                }
-        );
-        menu.show();
+    public boolean onAlbumLongClick(int position, AlbumView albumView) {
+        return false;
     }
 
     @Override
-    public void onOverflowClick(View v, Album album) {
-
+    public void onAlbumOverflowClicked(View v, Album album) {
         PopupMenu menu = new PopupMenu(v.getContext(), v);
-
-        menu.getMenu().add(0, MusicUtils.Defs.PLAY_SELECTION, 0, R.string.play_selection);
-
-        SubMenu sub = menu.getMenu().addSubMenu(0, MusicUtils.Defs.ADD_TO_PLAYLIST, 1, R.string.add_to_playlist);
-        PlaylistUtils.makePlaylistMenu(v.getContext(), sub, 0);
-
-        menu.getMenu().add(0, MusicUtils.Defs.QUEUE, 2, R.string.add_to_queue);
-
-        if (ShuttleUtils.isUpgraded()) {
-            menu.getMenu().add(0, MusicUtils.Defs.TAGGER, 3, R.string.edit_tags);
-        }
-
-        menu.getMenu().add(0, MusicUtils.Defs.DELETE_ITEM, 6, R.string.delete_item);
-
-        menu.setOnMenuItemClickListener(item -> {
-
-                    SearchView view = getView();
-
-                    Observable<List<Song>> songsObservable = (album.getSongsObservable());
-
-                    switch (item.getItemId()) {
-                        case MusicUtils.Defs.PLAY_SELECTION:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.playAll(songs, () -> {
-                                        if (view != null) {
-                                            view.showEmptyPlaylistToast();
-                                        }
-                                    }));
-                            return true;
-                        case MusicUtils.Defs.PLAY_NEXT:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.playNext(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.NEW_PLAYLIST:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> PlaylistUtils.createPlaylistDialog(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.PLAYLIST_SELECTED:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> {
-                                        Playlist playlist = (Playlist) item.getIntent().getSerializableExtra(ShuttleUtils.ARG_PLAYLIST);
-                                        PlaylistUtils.addToPlaylist(v.getContext(), playlist, songs);
-                                    });
-                            return true;
-                        case MusicUtils.Defs.QUEUE:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.addToQueue(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.TAGGER:
-                            if (view != null) {
-                                view.showTaggerDialog(TaggerDialog.newInstance(album));
-                            }
-                            return true;
-                        case MusicUtils.Defs.DELETE_ITEM:
-                            if (view != null) {
-                                view.showDeleteDialog(new DialogUtils.DeleteDialogBuilder()
-                                        .context(v.getContext())
-                                        .songsToDelete(songsObservable)
-                                        .singleMessageId(R.string.delete_album_desc)
-                                        .multipleMessage(R.string.delete_album_desc_multiple)
-                                        .itemNames(Collections.singletonList((album.name)))
-                                        .build());
-                            }
-                            return true;
-                    }
-                    return false;
-                }
-        );
+        menu.inflate(R.menu.menu_album);
+        menu.setOnMenuItemClickListener(MenuUtils.getAlbumMenuClickListener(v.getContext(), album, taggerDialog -> {
+            SearchView searchView = getView();
+            if (searchView != null) {
+                searchView.showTaggerDialog(taggerDialog);
+            }
+        }));
         menu.show();
     }
 
-    @Override
-    public void onOverflowClick(View v, Song song) {
-
-        PopupMenu menu = new PopupMenu(v.getContext(), v);
-        menu.getMenu().add(0, MusicUtils.Defs.PLAY_NEXT, 0, R.string.play_next);
-        menu.getMenu().add(0, MusicUtils.Defs.USE_AS_RINGTONE, 4, R.string.ringtone_menu);
-        SubMenu sub = menu.getMenu().addSubMenu(0, MusicUtils.Defs.ADD_TO_PLAYLIST, 1, R.string.add_to_playlist);
-
-        PlaylistUtils.makePlaylistMenu(v.getContext(), sub, 0);
-
-        menu.getMenu().add(0, MusicUtils.Defs.QUEUE, 2, R.string.add_to_queue);
-
-        if (ShuttleUtils.isUpgraded()) {
-            menu.getMenu().add(0, MusicUtils.Defs.TAGGER, 3, R.string.edit_tags);
-        }
-
-        menu.getMenu().add(0, MusicUtils.Defs.DELETE_ITEM, 6, R.string.delete_item);
-
-        menu.setOnMenuItemClickListener(item -> {
-
-                    SearchView view = getView();
-
-                    Observable<List<Song>> songsObservable = Observable.just(Collections.singletonList(song));
-
-                    switch (item.getItemId()) {
-                        case MusicUtils.Defs.PLAY_SELECTION:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.playAll(songs, () -> {
-                                        if (view != null) {
-                                            view.showEmptyPlaylistToast();
-                                        }
-                                    }));
-                            return true;
-                        case MusicUtils.Defs.PLAY_NEXT:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.playNext(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.NEW_PLAYLIST:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> PlaylistUtils.createPlaylistDialog(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.PLAYLIST_SELECTED:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> {
-                                        Playlist playlist = (Playlist) item.getIntent().getSerializableExtra(ShuttleUtils.ARG_PLAYLIST);
-                                        PlaylistUtils.addToPlaylist(v.getContext(), playlist, songs);
-                                    });
-                            return true;
-                        case MusicUtils.Defs.USE_AS_RINGTONE:
-                            // Set the system setting to make this the current
-                            // ringtone
-                            ShuttleUtils.setRingtone(v.getContext(), song);
-                            return true;
-                        case MusicUtils.Defs.QUEUE:
-                            songsObservable
-                                    .subscribeOn(Schedulers.io())
-                                    .observeOn(AndroidSchedulers.mainThread())
-                                    .subscribe(songs -> MusicUtils.addToQueue(v.getContext(), songs));
-                            return true;
-                        case MusicUtils.Defs.TAGGER:
-                            if (view != null) {
-                                view.showTaggerDialog(TaggerDialog.newInstance(song));
-                            }
-                            return true;
-                        case MusicUtils.Defs.DELETE_ITEM:
-                            if (view != null) {
-                                view.showDeleteDialog(new DialogUtils.DeleteDialogBuilder()
-                                        .context(v.getContext())
-                                        .songsToDelete(songsObservable)
-                                        .singleMessageId(R.string.delete_song_desc)
-                                        .multipleMessage(R.string.delete_song_desc_multiple)
-                                        .itemNames(Collections.singletonList((song.name)))
-                                        .build());
-                            }
-                            return true;
-                    }
-                    return false;
-                }
-        );
-        menu.show();
-    }
-
-    private static class SongFilterOperator implements Observable.Operator<List<AdaptableItem>, List<Song>> {
+    private class SongFilterOperator implements SingleOperator<List<ViewModel>, List<Song>> {
 
         private String filterString;
 
         private RequestManager requestManager;
 
         private PrefixHighlighter prefixHighlighter;
-
-        private MultiSelector dummySelector = new MultiSelector();
 
         private SearchHeaderView songsHeader = new SearchHeaderView(new Header(ShuttleApplication.getInstance().getString(R.string.tracks_title)));
 
@@ -494,11 +236,15 @@ class SearchPresenter extends Presenter<SearchView> implements
         }
 
         @Override
-        public Subscriber<List<Song>> call(Subscriber<? super List<AdaptableItem>> subscriber) {
-            return new Subscriber<List<Song>>() {
+        public SingleObserver<? super List<Song>> apply(SingleObserver<? super List<ViewModel>> observer) throws Exception {
+            return new SingleObserver<List<Song>>() {
                 @Override
-                public void onNext(List<Song> songs) {
+                public void onSubscribe(Disposable d) {
+                    observer.onSubscribe(d);
+                }
 
+                @Override
+                public void onSuccess(List<Song> songs) {
                     char[] prefix = filterString.toUpperCase().toCharArray();
 
                     List<Album> albums = Operators.songsToAlbums(songs);
@@ -507,41 +253,34 @@ class SearchPresenter extends Presenter<SearchView> implements
                     List<AlbumArtist> albumArtists = Operators.albumsToAlbumArtists(albums);
                     Collections.sort(albumArtists, AlbumArtist::compareTo);
 
-                    if (isUnsubscribed()) return;
-
                     boolean fuzzy = SettingsManager.getInstance().getSearchFuzzy();
 
                     Stream<Song> songStream = Stream.of(songs)
                             .filter(song -> song.name != null);
 
-                    Stream<Song> filteredStream = fuzzy ? applyJaroWinklerFilter(songStream) : applySongFilter(songStream);
+                    songs = (fuzzy ? applyJaroWinklerFilter(songStream) : applySongFilter(songStream))
+                            .toList();
 
-                    List<AdaptableItem> adaptableItems = filteredStream.map(song -> {
-                        SongView songView = new SongView(song, dummySelector, requestManager);
+                    SongViewClickListener songViewClickListener = new SongViewClickListener(songs);
+
+                    List<ViewModel> viewModels = Stream.of(songs).map(song -> {
+                        SongView songView = new SongView(song, requestManager);
+                        songView.setClickListener(songViewClickListener);
                         songView.setPrefix(prefixHighlighter, prefix);
                         return songView;
-                    })
-                            .collect(Collectors.toList());
+                    }).collect(Collectors.toList());
 
-                    if (!adaptableItems.isEmpty()) {
-                        adaptableItems.add(0, songsHeader);
+                    if (!viewModels.isEmpty()) {
+                        viewModels.add(0, songsHeader);
                     }
 
-                    if (!subscriber.isUnsubscribed()) {
-                        subscriber.onNext(adaptableItems);
-                    }
-                }
-
-                @Override
-                public void onCompleted() {
-                    subscriber.onCompleted();
+                    observer.onSuccess(viewModels);
                 }
 
                 @Override
                 public void onError(Throwable e) {
-                    subscriber.onError(e);
+                    observer.onError(e);
                 }
-
             };
         }
 
@@ -558,7 +297,7 @@ class SearchPresenter extends Presenter<SearchView> implements
         }
     }
 
-    private static class AlbumFilterOperator implements Observable.Operator<List<AdaptableItem>, List<Album>> {
+    private class AlbumFilterOperator implements SingleOperator<List<ViewModel>, List<Album>> {
 
         private String filterString;
 
@@ -575,16 +314,18 @@ class SearchPresenter extends Presenter<SearchView> implements
         }
 
         @Override
-        public Subscriber<? super List<Album>> call(Subscriber<? super List<AdaptableItem>> subscriber) {
-            return new Subscriber<List<Album>>() {
+        public SingleObserver<? super List<Album>> apply(SingleObserver<? super List<ViewModel>> observer) throws Exception {
+            return new SingleObserver<List<Album>>() {
                 @Override
-                public void onNext(List<Album> albums) {
+                public void onSubscribe(Disposable d) {
+                    observer.onSubscribe(d);
+                }
 
+                @Override
+                public void onSuccess(List<Album> albums) {
                     char[] prefix = filterString.toUpperCase().toCharArray();
 
                     Collections.sort(albums, Album::compareTo);
-
-                    if (isUnsubscribed()) return;
 
                     boolean fuzzy = SettingsManager.getInstance().getSearchFuzzy();
 
@@ -593,31 +334,24 @@ class SearchPresenter extends Presenter<SearchView> implements
 
                     Stream<Album> filteredStream = fuzzy ? applyJaroWinklerAlbumFilter(albumStream) : applyAlbumFilter(albumStream);
 
-                    List<AdaptableItem> adaptableItems = filteredStream.map(album -> {
+                    List<ViewModel> viewModels = filteredStream.map(album -> {
                         AlbumView albumView = new AlbumView(album, ViewType.ALBUM_LIST, requestManager);
+                        albumView.setClickListener(SearchPresenter.this);
                         albumView.setPrefix(prefixHighlighter, prefix);
                         return albumView;
                     }).collect(Collectors.toList());
 
-                    if (!adaptableItems.isEmpty()) {
-                        adaptableItems.add(0, albumsHeader);
+                    if (!viewModels.isEmpty()) {
+                        viewModels.add(0, albumsHeader);
                     }
 
-                    if (!subscriber.isUnsubscribed()) {
-                        subscriber.onNext(adaptableItems);
-                    }
-                }
-
-                @Override
-                public void onCompleted() {
-                    subscriber.onCompleted();
+                    observer.onSuccess(viewModels);
                 }
 
                 @Override
                 public void onError(Throwable e) {
-                    subscriber.onError(e);
+                    observer.onError(e);
                 }
-
             };
         }
 
@@ -634,7 +368,7 @@ class SearchPresenter extends Presenter<SearchView> implements
         }
     }
 
-    private static class AlbumArtistFilterOperator implements Observable.Operator<List<AdaptableItem>, List<AlbumArtist>> {
+    private class AlbumArtistFilterOperator implements SingleOperator<List<ViewModel>, List<AlbumArtist>> {
 
         private String filterString;
 
@@ -651,16 +385,18 @@ class SearchPresenter extends Presenter<SearchView> implements
         }
 
         @Override
-        public Subscriber<? super List<AlbumArtist>> call(Subscriber<? super List<AdaptableItem>> subscriber) {
-            return new Subscriber<List<AlbumArtist>>() {
+        public SingleObserver<? super List<AlbumArtist>> apply(SingleObserver<? super List<ViewModel>> observer) throws Exception {
+            return new SingleObserver<List<AlbumArtist>>() {
                 @Override
-                public void onNext(List<AlbumArtist> albumArtists) {
+                public void onSubscribe(Disposable d) {
+                    observer.onSubscribe(d);
+                }
 
+                @Override
+                public void onSuccess(List<AlbumArtist> albumArtists) {
                     char[] prefix = filterString.toUpperCase().toCharArray();
 
                     Collections.sort(albumArtists, AlbumArtist::compareTo);
-
-                    if (isUnsubscribed()) return;
 
                     boolean fuzzy = SettingsManager.getInstance().getSearchFuzzy();
 
@@ -669,33 +405,26 @@ class SearchPresenter extends Presenter<SearchView> implements
 
                     Stream<AlbumArtist> filteredStream = fuzzy ? applyJaroWinklerAlbumArtistFilter(albumArtistStream) : applyAlbumArtistFilter(albumArtistStream);
 
-                    List<AdaptableItem> adaptableItems = filteredStream
+                    List<ViewModel> viewModels = filteredStream
                             .map(albumArtist -> {
                                 AlbumArtistView albumArtistView = new AlbumArtistView(albumArtist, ViewType.ARTIST_LIST, requestManager);
+                                albumArtistView.setClickListener(SearchPresenter.this);
                                 albumArtistView.setPrefix(prefixHighlighter, prefix);
-                                return (AdaptableItem) albumArtistView;
+                                return (ViewModel) albumArtistView;
                             })
-                            .collect(Collectors.toList());
+                            .toList();
 
-                    if (!adaptableItems.isEmpty()) {
-                        adaptableItems.add(0, artistsHeader);
+                    if (!viewModels.isEmpty()) {
+                        viewModels.add(0, artistsHeader);
                     }
 
-                    if (!subscriber.isUnsubscribed()) {
-                        subscriber.onNext(adaptableItems);
-                    }
-                }
-
-                @Override
-                public void onCompleted() {
-                    subscriber.onCompleted();
+                    observer.onSuccess(viewModels);
                 }
 
                 @Override
                 public void onError(Throwable e) {
-                    subscriber.onError(e);
+                    observer.onError(e);
                 }
-
             };
         }
 
@@ -709,6 +438,52 @@ class SearchPresenter extends Presenter<SearchView> implements
 
         private Stream<AlbumArtist> applyAlbumArtistFilter(Stream<AlbumArtist> stream) {
             return stream.filter(albumArtist -> StringUtils.containsIgnoreCase(albumArtist.name, filterString));
+        }
+    }
+
+    private class SongViewClickListener implements SongView.ClickListener {
+
+        List<Song> songs;
+
+        public SongViewClickListener(List<Song> songs) {
+            this.songs = songs;
+        }
+
+        @Override
+        public void onSongClick(int position, SongView songView) {
+            SearchView view = getView();
+
+            int index = songs.indexOf(songView.song);
+
+            MusicUtils.playAll(songs, index, false, (String message) -> {
+                if (view != null) {
+                    view.showToast(message);
+                }
+            });
+        }
+
+        @Override
+        public boolean onSongLongClick(int position, SongView songView) {
+            return false;
+        }
+
+        @Override
+        public void onSongOverflowClick(int position, View v, Song song) {
+            PopupMenu menu = new PopupMenu(v.getContext(), v);
+            menu.inflate(R.menu.menu_search);
+            menu.setOnMenuItemClickListener(MenuUtils.getSongMenuClickListener(v.getContext(), song,
+                    taggerDialog -> {
+                        SearchView searchView = getView();
+                        if (searchView != null) {
+                            searchView.showTaggerDialog(taggerDialog);
+                        }
+                    }, null));
+            menu.show();
+        }
+
+        @Override
+        public void onStartDrag(SongView.ViewHolder holder) {
+
         }
     }
 }
